--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "jspaint",
-  "dependencies": {
-    "tiny-lr": "0.0.5",
-    "gulp": "~3.5.2",
-    "express": "~3.4.7",
-    "gulp-util": "~2.2.0"
+  "main": "index.html",
+  "window": {
+    "toolbar": false,
+    "width": 800,
+    "height": 600
+  },
+  "devDependencies": {
+    "gulp": "~3.5.6",
+    "gulp-requirejs": "~0.1.3"
   }
 }
